--- a/folderweek-1/css/rwdpage.css
+++ b/folderweek-1/css/rwdpage.css
@@ -41,6 +41,16 @@ a:hover {
     justify-content: center;
 }
 
+/* HamMenu */
+.menu_switch {
+    display: none;
+}
+
+.menu {
+    display: none;
+}
+
+/* navbar */
 .items_content {
     height: 100%;
     width: 28em;
@@ -64,6 +74,7 @@ li {
     text-align: center;
 }
 
+/* Container */
 .container-normal {
     height: 93%;
 }
@@ -108,9 +119,7 @@ li {
 
 .section {
     width: 100%;
-    /* width: 45.3em; */
     height: 100%;
-    /* height: 12.6em; */
     background-color: #8899aa;
     margin: 0 0.8em;
     display: flex;
@@ -129,7 +138,6 @@ li {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    /* margin: 14px 0; */
 }
 
 .top {
@@ -162,7 +170,120 @@ button {
     cursor: pointer;
 }
 
+@media screen and (max-width:500px) {
+    /* navbar */
+    .items_content {
+        display: none;
+    }
+
+    .items {
+        display: none;
+    }
+
+    #logo {
+        font-size: 1em;
+    }
+
+    /* HamMenu */
+    .menu_switch {
+        position: absolute;
+        right: 2.5em;
+        height: 4.5em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .bar {
+        width: 2em;
+        height: 2em;
+        z-index: 4;
+    }
+
+    .menu {
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 50%;
+        background-color: #818f9d;
+        box-shadow: 0 0 0 0.8px #818f9d;
+        opacity: 0.9;
+    }
+
+    .items_content_menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20%;
+        padding: 0% 0;
+        font-size: 1.5em;
+        line-height: 3;
+    }
+
+    a:hover {
+        background-color: #eeeeee;
+    }
+
+    .item {
+        width: 100%;
+        height: 2em;
+    }
+
+    .welcome_content {
+        font-size: 2em;
+    }
+
+    .section_container {
+        height: auto;
+    }
+
+    .section_title {
+        height: 3em;
+        font-size: 1.5em;
+    }
+
+    .section_content {
+        height: auto;
+    }
+
+    .box {
+        width: 90%;
+        height: 20em;
+        flex-direction: column;
+    }
+
+    .top {
+        margin-bottom: 0;
+    }
+
+    .down {
+        margin-top: 0;
+    }
+
+    .section {
+        margin: 0.5em 0.5em;
+    }
+
+    .section span {
+        padding-top: 0.8em;
+        font-size: 1em;
+    }
+
+    .section_btn {
+        height: auto;
+        padding: 1.5em 0;
+    }
+
+    button {
+        font-size: 1em;
+    }
+
+}
+
 @media screen and (max-width:800px) and (min-width:500px) {
+    /* navbar */
     .items_content {
         display: none;
     }
@@ -178,7 +299,7 @@ button {
     /* HamMenu */
     .menu_switch {
         position: absolute;
-        top: 0;
+        /* top: 0; */
         right: 3.5em;
         height: 4.5em;
         display: flex;
@@ -201,37 +322,8 @@ button {
         width: 50%;
         background-color: #818f9d;
         box-shadow: 0 0 0 0.8px #818f9d;
-        opacity: 0.8;
-        /* transform: translate(0, 0); */
+        opacity: 0.9;
     }
-
-    /* .menu.is-closed {
-        animation: slideOutRight 0.5s 0.25s both;
-    }
-
-    .menu.is-opened {
-        animation: slideInRight 0.5s 0s both;
-    }
-
-    @keyframes slideInRight {
-        0% {
-            transform: translate(50%, 0)
-        }
-
-        100% {
-            transform: translate(0, 0)
-        }
-    }
-
-    @keyframes slideOutRight {
-        0% {
-            transform: translate(0, 0)
-        }
-
-        100% {
-            transform: translate(50%, 0)
-        }
-    } */
 
     .items_content_menu {
         display: flex;
@@ -239,7 +331,7 @@ button {
         align-items: center;
         margin-top: 20%;
         padding: 0% 0;
-        font-size: 3em;
+        font-size: 2.5em;
         line-height: 3;
     }
 
