--- a/folderweek-1/css/rwdpage.css
+++ b/folderweek-1/css/rwdpage.css
@@ -14,13 +14,13 @@ body {
 
 .navigator {
     font-size: 1.25em;
-    background-color: #eeeeee;
-    height: 7%;
     width: 100%;
+    height: 7%;
+    background-color: #eeeeee;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 3;
+    z-index: 2;
 }
 
 a {
@@ -33,8 +33,8 @@ a:hover {
 }
 
 #logo {
-    height: 100%;
     width: 13em;
+    height: 100%;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -52,8 +52,8 @@ a:hover {
 
 /* navbar */
 .items_content {
-    height: 100%;
     width: 28em;
+    height: 100%;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -62,8 +62,8 @@ a:hover {
 }
 
 .items {
-    height: 100%;
     width: 7.5em;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,21 +75,24 @@ li {
 }
 
 /* Container */
-.container-normal {
+.container {
     height: 93%;
 }
 
-.welcome_content {
+/* Welcome Message */
+.greeting_content {
+    font-size: 2.5em;
+    font-weight: bold;
     height: 26%;
     background-color: #ccddee;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
-    font-size: 2.5em;
+
 }
 
-.section_container {
+/* Section Title */
+.section_all {
     height: 74%;
     background-color: transparent;
     display: flex;
@@ -98,37 +101,23 @@ li {
 }
 
 .section_title {
-    height: 13%;
-    font-weight: bold;
     font-size: 2em;
+    font-weight: bold;
+    height: 13%;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: transparent;
 }
 
 .section_content {
-    background-color: transparent;
     width: 100%;
     height: 70%;
+    background-color: transparent;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    flex-direction: column;
-}
-
-.section {
-    width: 100%;
-    height: 100%;
-    background-color: #8899aa;
-    margin: 0 0.8em;
-    display: flex;
-    justify-content: center;
-}
-
-.section span {
-    padding-top: 0.8em;
-    font-size: 1.5em;
 }
 
 .box {
@@ -148,40 +137,51 @@ li {
     margin-top: 0.8em;
 }
 
-.section_btn {
+.sections {
+    width: 100%;
+    height: 100%;
+    background-color: #8899aa;
+    display: flex;
+    justify-content: center;
+    margin: 0 0.8em;
+}
+
+.sections span {
+    font-size: 1.5em;
+    padding-top: 0.8em;
+}
+
+.btn {
     width: 100%;
     height: 17%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
-button {
-    background-color: #ddeeff;
-    border: none;
-    height: 3em;
-    width: 8em;
-    text-align: center;
-    font-size: 1.5em;
-}
-
-.section_btn :hover {
+.btn :hover {
     background-color: cadetblue;
     cursor: pointer;
 }
 
-@media screen and (max-width:500px) {
-    /* navbar */
-    .items_content {
-        display: none;
-    }
+button {
+    font-size: 1.5em;
+    text-align: center;
+    width: 8em;
+    height: 3em;
+    background-color: #ddeeff;
+    border: none;
+}
 
-    .items {
-        display: none;
-    }
+@media screen and (max-width:500px) {
 
     #logo {
         font-size: 1em;
+    }
+
+    /* navbar */
+    .items_content {
+        display: none;
     }
 
     /* HamMenu */
@@ -201,25 +201,25 @@ button {
     }
 
     .menu {
-        display: none;
         position: absolute;
         top: 0;
         right: 0;
-        height: 100vh;
         width: 50%;
+        height: 100vh;
         background-color: #818f9d;
         box-shadow: 0 0 0 0.8px #818f9d;
         opacity: 0.9;
+        display: none;
     }
 
-    .items_content_menu {
+    .item_content_menu {
+        font-size: 1.5em;
+        line-height: 3;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-top: 20%;
         padding: 0% 0;
-        font-size: 1.5em;
-        line-height: 3;
     }
 
     a:hover {
@@ -231,17 +231,20 @@ button {
         height: 2em;
     }
 
-    .welcome_content {
+    /* Container */
+    /* Welcome Message */
+    .greeting_content {
         font-size: 2em;
     }
 
-    .section_container {
+    /* Section Title */
+    .section_all {
         height: auto;
     }
 
     .section_title {
-        height: 3em;
         font-size: 1.5em;
+        height: 3em;
     }
 
     .section_content {
@@ -262,16 +265,15 @@ button {
         margin-top: 0;
     }
 
-    .section {
+    .sections {
         margin: 0.5em 0.5em;
     }
 
-    .section span {
-        padding-top: 0.8em;
+    .sections span {
         font-size: 1em;
     }
 
-    .section_btn {
+    .btn {
         height: auto;
         padding: 1.5em 0;
     }
@@ -279,21 +281,21 @@ button {
     button {
         font-size: 1em;
     }
-
 }
 
 @media screen and (max-width:800px) and (min-width:500px) {
-    /* navbar */
-    .items_content {
-        display: none;
-    }
 
-    .items {
-        display: none;
+    .navigator {
+        font-size: 1em;
     }
 
     #logo {
         font-size: 1.4em;
+    }
+
+    /* navbar */
+    .items_content {
+        display: none;
     }
 
     /* HamMenu */
@@ -318,21 +320,21 @@ button {
         position: absolute;
         top: 0;
         right: 0;
-        height: 100vh;
         width: 50%;
+        height: 100vh;
         background-color: #818f9d;
         box-shadow: 0 0 0 0.8px #818f9d;
         opacity: 0.9;
     }
 
-    .items_content_menu {
+    .item_content_menu {
+        font-size: 2.5em;
+        line-height: 3;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-top: 20%;
         padding: 0% 0;
-        font-size: 2.5em;
-        line-height: 3;
     }
 
     a:hover {
@@ -344,36 +346,35 @@ button {
         height: 2em;
     }
 
-    .navigator {
-        font-size: 1em;
-    }
-
-    .welcome_content {
+    /* Container */
+    /* Welcome Message */
+    .greeting_content {
         font-size: 2em;
     }
 
+    /* Section Title */
     .section_title {
-        height: 18%;
         font-size: 1.5em;
+        height: 18%;
     }
 
     .section_content {
         height: 64%;
     }
 
-    .section {
-        width: 60%;
-    }
-
-    .section span {
-        font-size: 1em;
-    }
-
     .box {
         width: 96%;
     }
 
-    .section_btn {
+    .sections {
+        width: 60%;
+    }
+
+    .sections span {
+        font-size: 1em;
+    }
+
+    .btn {
         height: 18%;
     }
 
