--- a/folderweek-2/css/rwdpage.css
+++ b/folderweek-2/css/rwdpage.css
@@ -9,13 +9,14 @@ body {
     color: #000;
     background-color: #fff;
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 .navigator {
+    position: fixed;
     font-size: 1.25em;
     width: 100%;
-    height: 7%;
+    height: 60px;
     background-color: #eeeeee;
     display: flex;
     align-items: center;
@@ -76,14 +77,15 @@ li {
 
 /* Container */
 .container {
-    height: 93%;
+    position: relative;
+    top: 60px;
 }
 
 /* Welcome Message */
 .greeting_content {
     font-size: 2.5em;
     font-weight: bold;
-    height: 26%;
+    height: 260px;
     background-color: #ccddee;
     display: flex;
     align-items: center;
@@ -93,7 +95,7 @@ li {
 
 /* Section Title */
 .section_all {
-    height: 74%;
+    height: auto;
     background-color: transparent;
     display: flex;
     flex-direction: column;
@@ -103,7 +105,7 @@ li {
 .section_title {
     font-size: 2em;
     font-weight: bold;
-    height: 13%;
+    height: 80px;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -112,12 +114,13 @@ li {
 
 .section_content {
     width: 100%;
-    height: 70%;
+    height: 400px;
     background-color: transparent;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 .box {
@@ -153,10 +156,11 @@ li {
 
 .btn {
     width: 100%;
-    height: 17%;
+    height: 63px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 20px;
 }
 
 .btn :hover {
@@ -195,6 +199,8 @@ button {
     }
 
     .bar {
+        display: block;
+        position: absolute;
         width: 2em;
         height: 2em;
         z-index: 4;
@@ -206,20 +212,18 @@ button {
         right: 0;
         width: 50%;
         height: 100vh;
-        background-color: #818f9d;
+        background-color: #fff;
         box-shadow: 0 0 0 0.8px #818f9d;
         opacity: 0.9;
         display: none;
     }
 
     .item_content_menu {
-        font-size: 1.5em;
         line-height: 3;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        margin-top: 20%;
-        padding: 0% 0;
+        align-items: flex-start;
+        padding: 0 0 0 6%;
     }
 
     a:hover {
@@ -228,13 +232,14 @@ button {
 
     .item {
         width: 100%;
-        height: 2em;
+        height: 3em;
     }
 
     /* Container */
     /* Welcome Message */
     .greeting_content {
         font-size: 2em;
+        height: 232px;
     }
 
     /* Section Title */
@@ -243,12 +248,13 @@ button {
     }
 
     .section_title {
-        font-size: 1.5em;
-        height: 3em;
+        font-size: 2em;
+        height: 65px;
     }
 
     .section_content {
         height: auto;
+        margin-bottom: 10px;
     }
 
     .box {
@@ -275,7 +281,7 @@ button {
 
     .btn {
         height: auto;
-        padding: 1.5em 0;
+        padding-bottom: 10px;
     }
 
     button {
@@ -301,7 +307,6 @@ button {
     /* HamMenu */
     .menu_switch {
         position: absolute;
-        /* top: 0; */
         right: 3.5em;
         height: 4.5em;
         display: flex;
@@ -310,6 +315,8 @@ button {
     }
 
     .bar {
+        display: block;
+        position: absolute;
         width: 3em;
         height: 3em;
         z-index: 4;
@@ -322,19 +329,18 @@ button {
         right: 0;
         width: 50%;
         height: 100vh;
-        background-color: #818f9d;
+        background-color: #fff;
         box-shadow: 0 0 0 0.8px #818f9d;
         opacity: 0.9;
     }
 
     .item_content_menu {
-        font-size: 2.5em;
-        line-height: 3;
+        font-size: 1.5em;
+        line-height: 4;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        margin-top: 20%;
-        padding: 0% 0;
+        align-items: flex-start;
+        padding: 0 0 0 6%;
     }
 
     a:hover {
@@ -343,7 +349,7 @@ button {
 
     .item {
         width: 100%;
-        height: 2em;
+        height: 3em;
     }
 
     /* Container */
@@ -354,12 +360,13 @@ button {
 
     /* Section Title */
     .section_title {
-        font-size: 1.5em;
-        height: 18%;
+        font-size: 2em;
+        height: 70px;
     }
 
     .section_content {
-        height: 64%;
+        height: 430px;
+        margin-bottom: 10px;
     }
 
     .box {
@@ -375,7 +382,8 @@ button {
     }
 
     .btn {
-        height: 18%;
+        height: 70px;
+        padding-bottom: 10px;
     }
 
     button {
