--- a/folderweek-2/css/rwdpage.css
+++ b/folderweek-2/css/rwdpage.css
@@ -177,7 +177,10 @@ button {
     border: none;
 }
 
-@media screen and (max-width:500px) {
+/* Assignment4 有一個很小的細節，就是斷點本身的寬度有沒有被「包含」？
+例如說在 800px 的寬度應該是呈現 >= 800 和 < 1200 的樣式，
+導覽列要到「小於 800px」才會變成漢堡選單；同理 500px 的寬度也要檢查看看 */
+@media screen and (max-width:499.9px) {
 
     #logo {
         font-size: 1em;
@@ -289,7 +292,7 @@ button {
     }
 }
 
-@media screen and (max-width:800px) and (min-width:500px) {
+@media screen and (max-width:799.9px) and (min-width:500px) {
 
     .navigator {
         font-size: 1em;
@@ -391,7 +394,7 @@ button {
     }
 }
 
-@media screen and (max-width:1200px) and (min-width:800px) {
+@media screen and (max-width:1199.9px) and (min-width:800px) {
     .box {
         width: 95%;
     }
