--- a/folderweek-4/stylesheet/style.css
+++ b/folderweek-4/stylesheet/style.css
@@ -1,26 +1,26 @@
-*{
-    margin: 0;
-    padding: 0;
-    background-color: #FCFAF2;
+* {
+  margin: 0;
+  padding: 0;
+  background-color: #fcfaf2;
 }
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
-main{
-    width: 80%;
-    padding-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+main {
+  width: 80%;
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-.card{
-    display: flex;
-    flex-direction: column;
-    line-height: 3;
-    border: 5px solid #69B0AC;
-    margin: 10px;
-    padding: 10px;
-    background-color: transparent;
+.card {
+  display: flex;
+  flex-direction: column;
+  line-height: 3;
+  border: 5px solid #69b0ac;
+  margin: 10px;
+  padding: 10px;
+  background-color: transparent;
 }
